[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isp_uart_loader"
version = "0.0.1"
authors = [
    { name = "Turgay Hopal", email = "turgay@realsolutions.com" },
]
description = "Nuvoton ISP UART Loader"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RSTurgay/Nuvoton-UART-ISP-Loader"
"Bug Tracker" = "https://github.com/RSTurgay/Nuvoton-UART-ISP-Loader/issues"